# data-migratie-tool

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/compare/: bron.csv  bron1.csv  doel.csv
data/single/: example.csv  example2.json  example3.json
src/data_migration_tool/: main.py
src/data_migration_tool/analyzers/: counts.py
src/data_validation_tool/: config.py  main.py
src/data_validation_tool/analyzers/: compare.py  counts.py  single_validations.py
src/data_validation_tool/loaders/: csv_loader.py  excel_loader.py  file_loader.py  json_loader.py
src/data_validation_tool/reporting/: console.py  summary.py
src/data_validation_tool/services/: compare_analysis.py  single_analysis.py
src/data_validation_tool/utils/: export.py  validation.py
